# VisualMIDI

./: .gitignore  CMakeLists.txt  README.md
src/: MIDIChannel.cpp  MIDIChannel.h  MIDISequencer.cpp  MIDISequencer.h  main.cpp
